--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,18 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131788350-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-131788350-1');
+  </script>
+
+
+
 </body>
 </html>
