--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "2; url = https://garmoshka-meteors.firebaseapp.com" />
    </head>
    <body>
-      <p>Hello HTML5!</p>
+      <p>Redirecting...</p>
    </body>
 </html>
